fixed overlap with form

--- a/frontend/src/app/chat-window/chat-window.component.scss
+++ b/frontend/src/app/chat-window/chat-window.component.scss
@@ -187,6 +187,7 @@
 
     .chat-messages {
         padding: 1rem;
+        margin-bottom: 60px;
     }
 
     // .chat-message.ai .message-content {
